Fix fetching of oppfølgingsplaner when NL has two active NL-koblinger for the same SM